Bug 66416 - Incorrect unicode characters used in the "Brackets" menu
Summary: Incorrect unicode characters used in the "Brackets" menu
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Frédéric Wang
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on: 66282
Blocks:
  Show dependency treegraph
 
Reported: 2013-06-30 20:34 UTC by Frédéric Wang
Modified: 2013-07-03 07:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frédéric Wang 2013-06-30 20:34:33 UTC
- commands lang, rlang: U+3008 LEFT ANGLE BRACKET and U+3009 RIGHT ANGLE BRACKET are not in the MathML operator dictionary. They should be replaced by U+27E8 MATHEMATICAL LEFT ANGLE BRACKET and U+27E9 MATHEMATICAL LEFT ANGLE BRACKET.

- commands lline, rline, ldline, rdline: U+2223 DIVIDES and U+2225 PARALLEL TO are not fences but binary operators. They should be replaced by U+007C VERTICAL LINE and U+2016 DOUBLE VERTICAL LINE.
Comment 1 Commit Notification 2013-07-02 07:46:41 UTC
Frederic Wang committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=be4837c9da190b4450a7f8a46ee5b9808e5dd941

 fdo#66416 -  Use appropriate unicode characters for math "Brackets"



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Khaled Hosny 2013-07-03 07:01:49 UTC
A minor issue with the patch, the glyph names in the font should follow Adobe Glyph list for new fonts (http://partners.adobe.com/public/developer/en/opentype/aglfn13.txt) or just the uniXXXX scheme (see http://www.adobe.com/devnet/opentype/archives/glyph.html for the rationale). If you can submit a follow up patch, that would be great.
Comment 3 Frédéric Wang 2013-07-03 07:04:43 UTC
(In reply to comment #2)
> A minor issue with the patch, the glyph names in the font should follow
> Adobe Glyph list for new fonts
> (http://partners.adobe.com/public/developer/en/opentype/aglfn13.txt) or just
> the uniXXXX scheme (see
> http://www.adobe.com/devnet/opentype/archives/glyph.html for the rationale).
> If you can submit a follow up patch, that would be great.

OK, I'll do that.