 fdo#66416 -  Use appropriate unicode characters for math "Brackets"

Change-Id: I43d74c92f0de65f9456f5cd8ae150466b6a43717